# win-us-intl-altgr

./: CMakeLists.txt  LICENSE  README.md  layout.c  us-international-altgr-deadkeys.klc
resources/: kli.ini.in  layout.rc.in
